Rebuild env setup script