@@ -1,12 +1,12 @@
 #!/bin/bash
 
-export JAVA_HOME=/opt/jvm/jdk1.8.0_92
+export JAVA_HOME=/opt/env/jdk
 export PATH=$JAVA_HOME/bin:$PATH
 
-export M2_HOME=/opt/apache-maven-3.3.9
-export M2=$M2_HOME/bin
-export PATH=$M2:$PATH
-export MAVEN_OPTS="-Xms1024m -Xmx4096m -XX:PermSize=1024m"
+export M2_HOME=/opt/env/maven
+export PATH=$PATH:$M2_HOME/bin
+export M2_OPTS="-Xmx1256M -XX:MaxPermSize=512M"
+export MAVEN_OPTS="-Xmx1256m -XX:MaxPermSize=512m"
 
 export GRADLE_HOME=/opt/gradle-3.0
 export PATH=$GRADLE_HOME/bin:$PATH
